Navbar fix
Fixed at navbar blev skubbet af scrollbar

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,7 +1,7 @@
 /* CSS stylesheet  for application */
-
-
-
+body {
+    overflow-y: scroll;
+}
 .admintable {
     width:90% !important;
     text-align:center;
@@ -41,11 +41,15 @@ tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 .navbar-custom{
+    width: 100%;
     height:60px;
-    padding:0px;
+    padding:0;
+}
+.container{
+    overflow-y: auto;
 }
 .navbar-brand{
-    padding:0px;
+    padding:0;
 }
 .navbar-custom a{
     color:black !important;
@@ -53,6 +57,7 @@ tr:nth-child(even) {
     font-family:Arial, sans-serif;
 }
 .navbar-custom .nav-item{
+    box-sizing: border-box;
     padding-bottom:15px;
     padding-top:18px;
 }
